--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: 1395px;
     margin: 0 auto;
-    border: solid 1px;
+    // border: solid 1px;
 }
 
 .headerBox {
@@ -39,4 +39,23 @@ text-align: center;
 font-size: 58px;
 letter-spacing: 0.5px;
 padding: 30px 30px;
+}
+
+.button {
+    position: absolute;
+    right: 100px;
+    background-color: #8B83F6;
+    color: white;
+    width: 50px;
+    height: 30px;
+    font-size: 15px;
+    padding-top: 10px;
+    margin-top: -10px;
+    transition: 0.5s;
+    border-radius: 0px 0px 10px 10px;
+    border: white;
+}
+
+.button:hover {
+    margin-top: 0;
 }
