--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -39,3 +39,13 @@ font-size: 58px;
 letter-spacing: 0.5px;
 padding: 30px 30px;
 }
+
+.buttonOpen {
+    background-color: #fb4b4d;
+    border: none;
+    color: white;
+    cursor: pointer;
+    width: 60px;
+    height: 25px;
+    font-size: 20px;
+}
