--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,41 +1,58 @@
-.sidebar {
-    display: block;
-    height: 100vh;
-    width: 300px;
-    background-color: azure;
-    transition: 1s;
-    position: fixed;
-    z-index: 10;
-    top: 0;
+%wrap {
+  position: fixed;
+  top: 0;
+  width: 300px;
+  height: 100vh;
+  background-color: azure;
+  z-index: 10;
 }
 
-.close.left {
-left: -300px;
+.left-wrap {
+  @extend %wrap;
+  left: 0;
 }
 
-.close.right {
-    right: -300px;
+.left-start {
+  left: -300px;
 }
 
-.right {
-   right: 0;
-   border-left: solid 1px gray;
+.left-active {
+  left: 0;
+  transition: left 300ms;
 }
 
-.left {
-    left: 0;
-    border-right: solid 1px gray;
+.left-end {
+  left: -300px;
+  transition: left 300ms;
 }
 
-.closeBtn {
-    position: absolute;
-    right: 0;
-    width: 20px;
-    height: 20px;
-    background-color: #fb4b4d;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 20px;
+.right-wrap {
+  @extend %wrap;
+  right: 0;
 }
 
+.right-start {
+  right: -300px;
+}
+
+.right-active {
+  right: 0;
+  transition: right 300ms;
+}
+
+.right-end {
+  right: -300px;
+  transition: right 300ms;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #fb4b4d;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+}
