--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,9 +1,8 @@
 .container {
-    margin: 30px 20px;
     border: solid 1px;
-    width: 100px;
-    height: 100px;
-    // overflow: hidden;
+    width: 600px;
+    height: 400px;
+    background: linear-gradient(90deg, rgba(240,255,255,1) 15%, rgba(255,177,192,0.19931722689075626) 68%);    // overflow: hidden;
 }
 
 .slider {
@@ -13,17 +12,15 @@
    transition: 1s;
 }
 
-.slide {
-     display: flex;
-  justify-content: center;
-  align-items: center;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 30px;
-  
-}
-
 .delete {
     display: block;
     margin-top: 10px;
+}
+
+.markerBox {
+    border: solid 1px red;
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: center;
 }
