--- a/src/components/CrossAndZero/CrossAndZero.module.scss
+++ b/src/components/CrossAndZero/CrossAndZero.module.scss
@@ -1,5 +1,12 @@
+.container {
+    padding: 50px 100px;
+    width: 310px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .cell {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border: solid 1px red;
 }
