--- a/src/components/Accardion/Accardion.module.scss
+++ b/src/components/Accardion/Accardion.module.scss
@@ -2,10 +2,16 @@
     width: 150px;
     border: solid 1px;
     cursor: pointer;
-    transition: 3s;
 }
 
 .accardionEl {
     border-top: solid 1px;
+    margin: 0px 5px;
+}
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 5px;
 }
 
