--- a/src/components/Performers/Performers.module.scss
+++ b/src/components/Performers/Performers.module.scss
@@ -6,12 +6,9 @@
 }
 
 .performer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    object-fit: cover;
     height: 200px;
     width: 200px;
-    border: solid 1px  rgb(255, 0, 195);
+    border: solid 1px;
     border-radius: 50%;
-    background: white;
 }
