--- a/src/components/Notes/Notes.module.scss
+++ b/src/components/Notes/Notes.module.scss
@@ -1,25 +1,88 @@
-.container {
-  margin: 50px 0px;
-  display: flex;
-}
-.inputBox {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-}
-
-.title,
-.content {
+.title {
   display: block;
-  width: 99%;
-  border: solid 1px;
-}
-
-.content {
-  flex: 1;
+  width: 100%;
+  height: 30px;
+  border: none;
+  outline: none;
+  font-size: 24px;
+  padding-left: 10px;
 }
 
 .note {
   border: solid 1px;
   flex: 1;
+}
+
+.sidebarItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding-left: 16px;
+}
+
+.sidebarItem:hover {
+  background: rgb(252, 160, 160);
+}
+
+.wrap {
+  position: relative;
+  display: flex;
+  height: 100vh;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.btnAdd {
+  margin-top: auto;
+}
+
+.md {
+flex: 1;
+font-size: 40px;
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0px;
+}
+
+.inputSearch {
+  width: 100%;
+  outline: none;
+  border: none;
+  background: rgb(252, 160, 160);
+}
+
+.noteTitle {
+  flex: 1;
+}
+
+.mobileBtn {
+  display: none;
+}
+
+@media(max-width:430px) {
+  .mobileBtn {
+    display: initial;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 10;
+  }
+
+  .left {
+    display: none;
+  }
 }
