--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,3 @@
-:root {
-  --primay: black;
-  --bg-primay: white;
-
-  --link: #2a0b0b;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-p {
-  margin: 20px 0px;
-}
-
-.header {
-  font-size: 3rem;
-}
-
 .body {
   margin: 20px 0 10px;
   font-size: 0.9rem;
@@ -74,3 +50,11 @@ button {
   font-size: calc(10px + 2vmin);
 }
 
+.animate__animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-duration: var(--animate-duration);
+  animation-duration: var(--animate-duration);
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
