--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,10 +1,16 @@
 %wrap {
   position: fixed;
   top: 0;
-  width: 300px;
   height: 100vh;
   background-color: azure;
   z-index: var(--portal);
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
 .left-wrap {
