--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -7,7 +7,11 @@
     padding: 20px 0px;
 }
 
-.menuItem {
+body {
+    height: 3000px;
+}
+
+.header {
     display: flex;
     gap: 40px;
     border-bottom: solid 1px rgb(255, 0, 195);
