--- a/src/components/Notes/NewNotes.module.scss
+++ b/src/components/Notes/NewNotes.module.scss
@@ -26,3 +26,14 @@
   font-size: 24px;
   padding-left: 10px;
 }
+
+.modalBtns {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(255, 127, 168);
+}
+
+.search {
+  margin: 20px 0px;
+}
