--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,4 +5,14 @@
     height: 50px;
     width: 100%;
     border-bottom: solid 1px gray;
+    display: flex;
+    justify-content: space-between;
+}
+
+.admin {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background: rgb(141, 141, 252);
+    text-align: center;
 }
