--- a/src/components/Users/User.module.scss
+++ b/src/components/Users/User.module.scss
@@ -12,13 +12,13 @@
     border-radius: 50%;
 }
 
-.userName {
+.name {
     font-weight: bold;
     font-size: 17px;
     padding-bottom: 3px;
 }
 
-.userMail {
+.email {
     font-size: 14px;
     color: rgb(82, 82, 82);
 }
