--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,12 +2,16 @@
     display: flex;
 }
 
-.leftSide {
+.leftSide { 
     height: 100vh;
     width: 300px;
+
     background-color: azure;
     border-right: solid 1px gray;
-    overflow-y: scroll;
+
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .rightSide {
